--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -2,8 +2,9 @@
   width: 22px;
   height: 19px;
   background-image: url('../../../images/like.svg');
+  cursor: pointer;
+  transition: .5s;
 }
 .element__like:hover {
   opacity: 0.5;
-  transition: opacity .5s;
 }
