--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,14 @@
 .popup__container {
-  display: flex;
-  min-height: 100%;
-  align-items: center;
-  justify-content: center;
+  width: 430px;
+  height: 330px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
+  border-radius: 10px;
+  position: relative;
 } 
+ @media screen and (max-width: 579px) {
+  .popup__container {
+    width: 282px;
+    height: 322px;
+  }
+}
