--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,19 +4,14 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  height: 23px;
-  /*
-  ? пришлось выставить высоту, в фигме буквы вылезают за края блока, 
-  ? если этого не сделать popup становится по высоте больше, чем нужно. Так можно сделать?
-  */
 }
-@media screen and (max-width: 597px) {
+@media screen and (max-width: 579px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    margin-top: 25px;
+    margin-top: 26px;
     margin-left: 0;
+    margin-right: 6px;
     text-align: center;
-    height: 22px;
   }
 }
