--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -6,18 +6,16 @@
   line-height: 22px;
   color: #FFFFFF;
   width: 294px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
-@media screen and (max-width: 635px) {
+@media screen and (max-width: 710px) {
   .profile__subtitle {
     margin: 0 auto;
     font-size: 14px;
     line-height: 16.94px;
     width: 189px;
     text-align: center;
-  }
-}
-@media screen and (max-width: 365px) {
-  .profile__subtitle {
-    width: 189px;
   }
 }
