--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,18 +6,17 @@
   line-height: 48px;
   color: #FFFFFF;
   width: 294px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  padding-top: 0px;
 }
-@media screen and (max-width: 635px) {
+@media screen and (max-width: 710px) {
   .profile__title {
-    margin: 0 auto 14px;
+    margin: 0 auto 9px;
     font-size: 27px;
     line-height: 32.68px;
     width: 189px;
-  }
-}
-@media screen and (max-width: 365px) {
-  .profile__title {
-    width: 100%;
   }
 }
