--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,7 +1,10 @@
 .element__like {
   width: 22px;
   height: 19px;
+  background-color: rgba(0, 0, 0 , 0);
   background-image: url('../../../images/like.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
   cursor: pointer;
   transition: .5s;
 }
