--- a/blocks/popup/__form-input/popup__form-input.css
+++ b/blocks/popup/__form-input/popup__form-input.css
@@ -7,28 +7,17 @@
   font-size: 14px;
   line-height: 17px;
   height: 14px;
-  padding: 12px 0 9px 0;
+  padding: 9px 0 9px;
+  margin-bottom: 25px;
 }
 @media screen and (max-width: 579px) {
   .popup__form-input {
     width: 238px;
+    margin-bottom: 22px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
-}
-.popup__form-input:first-of-type {
-  margin-bottom: 20px;
-  margin-top: 39px;
 }
 .popup__form-input:last-of-type {
-  padding-bottom: 10px;
-}
-@media screen and (max-width: 579px) {
-  .popup__form-input:first-of-type {
-    margin-bottom: 20px;
-    margin-top: 64px;
-  }
-}
-@media screen and (max-width: 579px) {
-  .popup__form-input:last-of-type {
-    padding-bottom: 12px;
-  }
+  margin-bottom: 0;
 }
