--- a/blocks/popup/__form-input/popup__form-input.css
+++ b/blocks/popup/__form-input/popup__form-input.css
@@ -7,7 +7,7 @@
   font-size: 14px;
   line-height: 17px;
   height: 14px;
-  padding: 9px 0 9px;
+  padding: 9px 0 9px 3px;
   margin-bottom: 25px;
 }
 @media screen and (max-width: 579px) {
