--- a/pages/index.css
+++ b/pages/index.css
@@ -11,7 +11,7 @@
 @import url('../blocks/profile/__subtitle/profile__subtitle.css');
 @import url('../blocks/profile/__edit-button/profile__edit-button.css');
 @import url('../blocks/profile/__add-button/profile__add-button.css');
-@import url('../blocks/mesto/mesto.css');
+@import url('../blocks/place/place.css');
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/element/element.css');
 @import url('../blocks/element/__text/element__text.css');
