--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,9 +1,9 @@
-.profile__profile-info {  
+.profile__info {  
   margin: 0;
   display: flex;
 }
 @media screen and (max-width: 710px) {
-  .profile__profile-info {
+  .profile__info {
     justify-content: center;
     padding-left: 28px;
   }
