--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -20,6 +20,8 @@
 @import url('../blocks/element/__delete-button/element__delete-button.css');
 @import url('../blocks/element/__like/element__like.css');
 @import url('../blocks/element/__like/_active/element__like_active.css');
+@import url('../blocks/element/__like-container/element__like-container.css');
+@import url('../blocks/element/__like-value/element__like-value.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 @import url('../blocks/popup/popup.css');
