--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,7 +2,7 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  margin-right: 30px;
+  transition: opacity .5s;
 }
 @media screen and (max-width: 710px) {
   .profile__avatar {
