--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,9 +1,10 @@
 .profile__info {  
-  margin: 0;
+  margin: 0 0 0 30px;
   display: flex;
 }
 @media screen and (max-width: 710px) {
   .profile__info {
+    margin: 0;
     justify-content: center;
     padding-left: 28px;
   }
