--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -20,6 +20,7 @@
 @import url('../blocks/element/__title/element__title.css');
 @import url('../blocks/element/__image/element__image.css');
 @import url('../blocks/element/__delete-button/element__delete-button.css');
+@import url('../blocks/element/__delete-button/_off/element__delete-button_off.css');
 @import url('../blocks/element/__like/element__like.css');
 @import url('../blocks/element/__like/_active/element__like_active.css');
 @import url('../blocks/element/__like-container/element__like-container.css');
