--- a/src/blocks/profile/__avatar-edit/profile__avatar-edit.css
+++ b/src/blocks/profile/__avatar-edit/profile__avatar-edit.css
@@ -1,16 +1,19 @@
 .profile__avatar-edit {
-  width: 100%;
-  height: 100%;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  /* width: 100%; */
+  /* height: 100%; */
   padding: 0;
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
-  background-image: url('../../../images/changeAvatar.svg');  
+  background-image: url('../../../images/changeAvatar.svg');
   background-repeat: no-repeat;
   background-size: 26px 26px;
   background-position: center;
   opacity: 0;
-  transition: opacity .5s;
+  transition: opacity .4s;
 }
 
 .profile__avatar-edit:hover {
