--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
   position: fixed;
@@ -10,5 +10,5 @@
   align-items: center;
   visibility: hidden;
   opacity: 0;
-  transition: visibility .3s, opacity .3s linear;
+  transition: visibility 0.3s, opacity 0.3s linear;
 }
