--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -5,11 +5,16 @@
   font-size: 24px;
   line-height: 29px;
 }
+
 @media screen and (max-width: 579px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
     text-align: left;
     margin: 26px 0 26px 22px;
+  }
+  .popup__title_type_delete {
+    margin: 34px 0 14px;
+    align-self: center;
   }
 }
