--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -7,6 +7,7 @@
   background-size: contain;
   cursor: pointer;
   transition: opacity 0.5s;
+  transition: background-image 0.5s;
 }
 
 .element__like:hover {
