--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -3,7 +3,7 @@
   max-width: 880px;
   background: #000000;
   margin: 0 auto;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', 'Helvetica', 'Arial', sans-serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
