--- a/src/blocks/profile/__avatar-container/profile__avatar-container.css
+++ b/src/blocks/profile/__avatar-container/profile__avatar-container.css
@@ -1,11 +1,14 @@
 .profile__avatar-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  z-index: 0;
 }
 
 .profile__avatar-container:hover .profile__avatar {
-  opacity: .4;
+  opacity: 0.4;
 }
