--- a/src/blocks/profile/__avatar-edit/profile__avatar-edit.css
+++ b/src/blocks/profile/__avatar-edit/profile__avatar-edit.css
@@ -1,20 +1,30 @@
 .profile__avatar-edit {
+  background-color: transparent;
+  outline: none;
+  border-radius: 50%;
   width: 120px;
   height: 120px;
-  border-radius: 50%;
-  padding: 0;
-  background-repeat: no-repeat;
-  background-size: contain;
   position: absolute;
   background-image: url('../../../images/changeAvatar.svg');
   background-repeat: no-repeat;
   background-size: 26px 26px;
   background-position: center;
   opacity: 0;
-  transition: opacity .4s;
+  z-index: 1;
+  transition: opacity 0.4s;
 }
 
 .profile__avatar-edit:hover {
-  opacity: 1;
   cursor: pointer;
+  opacity: 1;
+}
+
+.profile__avatar-edit:focus {
+  outline: none;
+}
+
+.profile__avatar-edit:focus-visible {
+  opacity: 0.6;
+  outline: 2px solid white;
+  border-radius: 50%;
 }
