--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,12 @@
 .profile__avatar {
   width: 120px;
   height: 120px;
-  object-fit: cover;
   border-radius: 50%;
+  object-fit: cover;
   transform: translateZ(0);
-  transition: opacity .4s;
+  transition: opacity 0.4s;
 }
+
 @media screen and (max-width: 710px) {
   .profile__avatar {
     margin: 0 auto 26px;
