--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
 @import url('../blocks/page/_opened/page_opened.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__logo/header__logo.css');
+@import url('../blocks/header/__hidden-title/header__hidden-title.css');
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/profile/__avatar-container/profile__avatar-container.css');
 @import url('../blocks/profile/__avatar/profile__avatar.css');
